# pyflow

./: .gitignore  .travis.yml  API.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GRCOV.md  LICENSE  Python.toml  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  as.py  changelog.md  install_pyflow.sh  publish.sh  pyflow_0.1.9_amd64.snap.xdelta3  pyflow_0.1.9_amd64.snap.xdelta3-0  pyproject.toml  pyproject_.toml  release_checklist.md  rustfmt.toml  snapcraft.yaml  update_version.py
.claude/: settings.local.json
.github/workflows/: build_and_test.yml  codespell.yml  lint_python.yml  release.yml
.rpm/: pyflow.spec
UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt
pip/: README.md  setup.py
src/: build.rs  build_new.rs  cli_options.rs  commands.rs  dep_parse.rs  dep_parser.rs  dep_resolution.rs  dep_types.rs  edit_files.rs  files.rs  install.rs  main.rs  package_types.rs  py_versions.rs  script.rs  util.rs
src/actions/: clear.rs  init.rs  install.rs  list.rs  mod.rs  new.rs  package.rs  reset.rs  run.rs  run_script.rs  switch.rs
src/pyproject/: current.rs  mod.rs
src/util/: deps.rs  fs.rs  mod.rs  os.rs  paths.rs  prompts.rs
test/: .gitignore
toolz-0.10.0/: PKG-INFO
wix/: License.rtf  main.wxs  pyflow.json
