[package]
name = "pyflow"
version = "0.1.5"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
description = "A modern Python installation and dependency manager"
license = "MIT"
homepage = "https://www.github.com/David-OConnor/pyflow"
repository = "https://www.github.com/David-OConnor/pyflow"
readme = "README.md"
edition = "2018"
keywords = ["python","dependency", "packaging", "build"]
categories = ["development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "^0.11.1"
data-encoding = "^2.1.2"
directories = "^2.0.2"
flate2 = "1.0.12"
fs_extra = "^1.1.0"
# Perhaps this will prevent problems between linux distros
openssl = { version = "^0.10.25", features = ["vendored"] }
xz2 = "^0.1.6"
regex = "^1.1.9"
reqwest = "^0.9.21"
ring = "^0.16.9"
# We disable, by ommission, suggestions, so it doesn't think `pyflow ipython` is a misspelling
# of `pyflow python`.
structopt = { version = "0.3.2", default_features = false, features = ["color", "wrap_help", "doc"] }
serde = {version = "^1.0.101", features = ["derive"]}
tar = "^0.4.26"
toml = "^0.5.1"
zip = "^0.5.2"


[package.metadata.deb]
section = "Python"
# Non-MD subsection of readme.
extended-description = """This tool implements
PEP 582 -- Python local packages directory.
It manages dependencies, keeping them isolated in the project directory, and runs
python in an environment which uses this directory. Per PEP 582, dependencies
are stored in the project directory → `__pypackages__` → `3.7`(etc) → `lib`.
A virtual environment is created in the same diretory as `lib`, and is used
transparently."""


[package.metadata.rpm]
buildflags = ["--release"]

[package.metadata.rpm.targets]
pyflow = { path = "/usr/bin/pyflow" }
