[package]
name = "pyflow"
version = "0.3.5"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
description = "A modern Python installation and dependency manager"
license = "MIT"
homepage = "https://www.github.com/David-OConnor/pyflow"
repository = "https://www.github.com/David-OConnor/pyflow"
readme = "README.md"
edition = "2024"
keywords = ["python","dependency", "packaging", "build"]
categories = ["development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# todo: Clean up this dependency set

[dependencies]
termcolor = "1.4.1"
flate2 = "1.0.32"
rust-ini = "0.21.3"
xz2 = "0.1.7"
regex = "1.12.3"
ring = "0.17.8"  # OpenSSL. Todo: Do we need/want this?

# We disable, by omission, suggestions, so it doesn't think `pyflow ipython` is a misspelling
# of `pyflow python`.
structopt = { version = "0.3.26", default-features = false, features = ["color", "wrap_help", "doc"] }
serde = {version = "1.0.208", features = ["derive"]}
tar = "0.4.44"
toml = "1.0.7"
zip = "8.3.0"
nom = "8.0.0"
# rustls-tls is pure Rust — no system OpenSSL needed, works on all platforms including Windows.
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }


[dev-dependencies]
rstest = "0.23"
indoc = "2"

[package.metadata.deb]
section = "Python"
# Non-MD subsection of readme.
extended-description = """This tool implements
PEP 582 -- Python local packages directory.
It manages dependencies, keeping them isolated in the project directory, and runs
python in an environment which uses this directory. Per PEP 582, dependencies
are stored in the project directory → `__pypackages__` → `3.7`(etc) → `lib`.
A virtual environment is created in the same directory as `lib`, and is used
transparently."""


[package.metadata.rpm]
buildflags = ["--release"]

[package.metadata.rpm.targets]
pyflow = { path = "/usr/bin/pyflow" }


[package.metadata.maturin]
# todo
classifier = ["Programming Language :: Python"]
